SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default) (#4936)
* SSCSFT-20 - Ensure that application can be built with bootWithCCD locally.

# Conflicts:
#	README.md
#	src/cftlib/java/uk/gov/hmcts/reform/sscs/CftlibConfig.java

* SSCSFT-20 - Externalise date format property so it's loaded for server deployment only

* SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default)

* SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default)

Ensure that the new field is displayed for ESA benefit types only

* SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default)

Use DynamicRadioList field

* SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default)

Update with code review comments.

* SSCSFT-25 UC WCA Journey - Start date

Removed additional "duplicated" year assertions

* SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default)

Resolve conflict with master

* SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default)

Amend live from date

* SSCSFT-20 - Ensure that application can be built with bootWithCCD locally.

# Conflicts:
#	README.md
#	src/cftlib/java/uk/gov/hmcts/reform/sscs/CftlibConfig.java

* SSCSFT-20 - Externalise date format property so it's loaded for server deployment only

* SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default)

Update release version

* SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold years 2008 and 2013 (default)

Change Esa Regulations apply to a fixed list rather than a dynamic radio list.

* SSCSFT-24 ESA 2008 & 2013 regulations - A new ESA Regulations Year field to hold 